--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "description": "A Strapi application",
   "scripts": {
     "develop": "strapi develop",
-    "start": "strapi start",
-    "build": "strapi build",
-    "strapi": "strapi"
+    "start": "strapi start"
   },
   "devDependencies": {},
   "dependencies": {
